[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyc"
version = "0.1.0"
description = "Utilities for working with intraday stock datasets."
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20",
    "altair>=5.0",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
